# taktflow-embedded-production

./: .env.example  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile.pipeline  README.md  SETUP.md  TEST.md  TOOLCHAIN.md  project.yaml  taktflow-embedded-overview.md
.claude/rules/: asil-d.md  build-and-ci.md  c-code.md  device-provisioning.md  firmware-core.md  firmware-general.md  firmware-scripts.md  firmware-src.md  global.md  hardware.md  lessons-learned.md  naming-conventions.md  safety-standards.md  submodule-workflow.md
.github/workflows/: ci.yml  ci.yml.disabled  hil-nightly.yml  hil-preflight-nightly.yml  hil-preflight-nightly.yml.disabled  misra.yml  sil-nightly.yml  test.yml  test.yml.disabled  traceability.yml  traceability.yml.disabled
arxml/: TaktflowSystem.arxml
arxml_v2/: TaktflowSystem.arxml  connector_map.json
docker/: Dockerfile.can-setup  Dockerfile.plant-sim  Dockerfile.qnx-relay  Dockerfile.vecu  docker-compose.dev.yml  docker-compose.gil.yml  docker-compose.hil-pi.yml  docker-compose.hil.yml  docker-compose.laptop.yml  docker-compose.pi.yml  docker-compose.sil.yml
docker/ecu/: Dockerfile.ecu  entrypoint.sh
docs/: CURRICULUM.md  INDEX.md  LEARNING-JOURNEY.md  PROJECT_STATE.md  human-in-the-loop-tracker.md  taktflow-embedded-docs-overview.md
docs/analysis/: sc-safety-critical-dataflow.md  sc-safety-evidence-gap-log.md  sc-state-transition-model.md
docs/arxmlgen/: api-reference.md  architecture.md  arxml-coverage.md  migration-guide.md  quality-verification.md  test-report.md  user-guide.md
docs/aspice/: docs-aspice-overview.md
docs/deliverable-artifact/: docs-deliverable-artifact-overview.md
docs/guides/: reading-list.html  traceability-guide.md  usb-can-adapter-setup.md
docs/hardware/: bom.md  pin-mapping.md  taktflow-embedded-hardware-overview.md  wiring-log.md
docs/lessons-learned/: 2026-03-23-hil-bringup-stm32f4-systick.md  arxmlgen.md  embedded-bringup.md  foxbms-integration.md  stm32-bringup-p3.md  tms570-bringup.md
docs/safety/: INDEX.md
firmware/ecu_cpp/bcm/: CMakeLists.txt
firmware/ecu_cpp/bcm/application/: CMakeLists.txt
firmware/ecu_cpp/bcm/application/include/app/: BcmApp.h
firmware/ecu_cpp/bcm/application/include/signals/: BcmSignals.h  CanFrameCodec.h  E2eProtection.h
firmware/ecu_cpp/bcm/application/include/swc/: DoorLockComponent.h  IndicatorsComponent.h  LightsComponent.h
firmware/ecu_cpp/bcm/application/include/systems/: BcmCanSystem.h  BcmSystem.h  DoCanSystem.h  UdsSystem.h
firmware/ecu_cpp/bcm/application/src/app/: BcmApp.cpp
firmware/ecu_cpp/bcm/application/src/signals/: CanFrameCodec.cpp  E2eProtection.cpp
firmware/ecu_cpp/bcm/application/src/swc/: DoorLockComponent.cpp  IndicatorsComponent.cpp  LightsComponent.cpp
firmware/ecu_cpp/bcm/application/src/systems/: BcmCanSystem.cpp  BcmSystem.cpp  DoCanSystem.cpp  UdsSystem.cpp
firmware/ecu_cpp/bcm/asyncBinding/: CMakeLists.txt
firmware/ecu_cpp/bcm/asyncBinding/include/async/: AsyncBinding.h
firmware/ecu_cpp/bcm/asyncCoreConfiguration/include/async/: Config.h
firmware/ecu_cpp/bcm/configuration/: CMakeLists.txt
firmware/ecu_cpp/bcm/configuration/common/src/busid/: BusId.cpp
firmware/ecu_cpp/bcm/configuration/include/busid/: BusId.h
firmware/ecu_cpp/bcm/etl_profile/: etl_profile.h
firmware/ecu_cpp/icu/application/: CMakeLists.txt
firmware/ecu_cpp/icu/application/include/app/: IcuApp.h
firmware/ecu_cpp/icu/application/include/signals/: CanFrameCodec.h  E2eProtection.h  IcuSignals.h
firmware/ecu_cpp/icu/application/include/swc/: DashboardComponent.h  DtcDisplayComponent.h
firmware/ecu_cpp/icu/application/include/systems/: DoCanSystem.h  IcuCanSystem.h  IcuSystem.h  TransportSystem.h  UdsSystem.h
firmware/ecu_cpp/icu/application/src/app/: IcuApp.cpp
firmware/ecu_cpp/icu/application/src/signals/: CanFrameCodec.cpp  E2eProtection.cpp
firmware/ecu_cpp/icu/application/src/swc/: DashboardComponent.cpp  DtcDisplayComponent.cpp
firmware/ecu_cpp/icu/application/src/systems/: DoCanSystem.cpp  IcuCanSystem.cpp  IcuSystem.cpp  UdsSystem.cpp
firmware/ecu_cpp/tcu/: CMakeLists.txt
firmware/ecu_cpp/tcu/application/: CMakeLists.txt
firmware/ecu_cpp/tcu/application/include/app/: TcuApp.h
firmware/ecu_cpp/tcu/application/include/signals/: CanFrameCodec.h  E2eProtection.h  TcuSignals.h
firmware/ecu_cpp/tcu/application/include/swc/: DtcStoreComponent.h  Obd2PidsComponent.h  UdsServerComponent.h
firmware/ecu_cpp/tcu/application/include/systems/: DoCanSystem.h  TcuCanSystem.h  TcuSystem.h  UdsSystem.h
firmware/ecu_cpp/tcu/application/src/app/: TcuApp.cpp
firmware/ecu_cpp/tcu/application/src/signals/: CanFrameCodec.cpp  E2eProtection.cpp
firmware/ecu_cpp/tcu/application/src/swc/: DtcStoreComponent.cpp  Obd2PidsComponent.cpp  UdsServerComponent.cpp
firmware/ecu_cpp/tcu/application/src/systems/: DoCanSystem.cpp  TcuCanSystem.cpp  TcuSystem.cpp  TransportSystem.cpp  UdsSystem.cpp
firmware/ecu_cpp/tcu/asyncCoreConfiguration/: CMakeLists.txt
firmware/ecu_cpp/tcu/asyncCoreConfiguration/include/async/: Config.h
firmware/ecu_cpp/tcu/configuration/common/src/busid/: BusId.cpp
firmware/ecu_cpp/tcu/configuration/include/busid/: BusId.h
gateway/: taktflow-embedded-gateway-overview.md  taktflow.dbc  taktflow_vehicle.dbc
model/: ecu_model.json  ecu_sidecar.yaml
scripts/: aws-iot-setup.sh  build_sil.sh  qnx_to_laptop_relay.py  setup_ssh.sh  tcp_to_vcan_docker.py
test/: Makefile.coverage  arxml_audit.py
tmp/: armodel_roundtrip.arxml
tmp/schema_fetch/arxml-editor-main/ARXML-Editor-main/: CMakeLists.txt  README.md
tmp/schema_fetch/arxml-editor-main/ARXML-Editor-main/.github/workflows/: windows-build.yml
tmp/schema_fetch/arxml-editor-main/ARXML-Editor-main/inc/: arxml_model.hpp  arxml_validator.hpp  main_window.hpp
tmp/schema_fetch/arxml-editor-main/ARXML-Editor-main/src/: arxml_model.cpp  arxml_validator.cpp  main.cpp  main_window.cpp
tools/: arxml_wiring.py  build_connectors.py  generate_all.py  inject_code_ports.py  sanity_check_all.py  tag_all_signals.py  trace_sample.py
(+1315 files in other folders)
